# llm-proofreader

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  modern_gui.py  proofreader.py  utils.py
