[tool.poetry]
name = "llm-proofreader"
version = "0.1.0"
description = "Simple Python app to proofread text using a local LLM"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
evdev = "^1.9.2"
requests = "^2.32.5"
tiktoken = "^0.12.0"
customtkinter = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.8.4"
mypy = "^1.13.0"
bandit = {extras = ["toml"], version = "^1.7.10"}

[tool.poetry.scripts]
proofreader = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "SIM102",  # collapsible if statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true

# Bandit configuration
[tool.bandit]
exclude_dirs = ["/tests"]
skips = ["B101"]  # Skip assert_used test
